--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
       <section class="huddle__footer">
         <div class="huddle__footer__icon">
-          <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
         </div>
 
         <div class="huddle__footer__icon">
-          <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
         </div>
 
         <div class="huddle__footer__icon">
-          <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
         </div>
       </section>
     </div>
